Delete module-info.java / Update compiler args